# mini_os

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs
tests/: README.md  basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
